# OVmath

./: README.md
OVMATH/: $null  .mxproject  OVMATH.ioc
OVMATH/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
OVMATH/Core/Src/: dma.c  freertos.c  gpio.c  main.c  rtc.c  stm32f4xx_it.c  tim.c  usart.c
OVMATH/Driders/BSP/: AHT21.c  AHT21.h  BL24C02.c  BL24C02.h  CST816.c  CST816.h  DataSava.c  DataSava.h  HrAlgorythm.c  HrAlgorythm.h  KT6368A.c  KT6368A.h  LSM303.c  LSM303.h  SPL06-001.c  SPL06-001.h  WDOG.c  WDOG.h  em70x8.c  em70x8.h  inv_mpu.c  inv_mpu.h  lcd.c  (+3 more)
OVMATH/MDK-ARM/: OVMATH.uvguix.陈科名  OVMATH.uvoptx  OVMATH.uvprojx  clean.bat  startup_stm32f411xe.lst
OVMATH/Middlewares/LVGL/GUI_APP/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  wifi_bluetooth_hardware.c  wifi_bluetooth_hardware.h
OVMATH/Middlewares/LVGL/GUI_APP/components/: ui_comp_hook.c
OVMATH/Middlewares/LVGL/GUI_APP/fonts/: ui_font_ALIBABAB6.c  ui_font_ALliBABA16.c  ui_font_huanzi30.c  ui_font_ionc.c  ui_font_ionc32.c  ui_font_part.c  ui_font_tianqhuanzi16.c  ui_font_tianqhuanzi30.c
OVMATH/Middlewares/LVGL/GUI_APP/images/: ui_img_1226748065.c  ui_img_1379335529.c  ui_img_1723068390.c  ui_img_guanji_png.c
OVMATH/Middlewares/LVGL/GUI_APP/screens/: ui_DateScreen.c  ui_DateScreen.h  ui_Hand.c  ui_Hand.h  ui_Screen1.c  ui_Screen1.h  ui_Screen7.c  ui_Screen7.h  ui_Screen8.c  ui_Screen8.h  ui_SizeScreen.c  ui_SizeScreen.h  ui_TICK.c  ui_TICK.h  ui_TScreen.c  ui_TScreen.h  ui_WeclomeScreen.c  ui_WeclomeScreen.h  ui_bybyScreen.c  ui_bybyScreen.h
(+593 files in other folders)
